--- a/LAB4_COMPONENTS_BASE_ARCH/e-commerce/src/main/resources/application.properties
+++ b/LAB4_COMPONENTS_BASE_ARCH/e-commerce/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=w1d4_ecommercedb
 
-logging.level.root=ERROR
-logging.level.org.springframework=ERROR
+logging.level.root=INFO
+logging.level.org.springframework=INFO
