--- a/LAB6_MSRV_1/part2/asdasdasdasdasd/src/main/resources/application.properties
+++ b/LAB6_MSRV_1/part2/asdasdasdasdasd/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.application.name=product-service
-#server.port=8901
+#spring.application.name=stock-service
+#server.port=8900
 #
 ## Consul Configuration
 #spring.cloud.consul.host=localhost
@@ -10,7 +10,6 @@
 #
 ## Actuator Configuration
 #management.endpoints.web.exposure.include=health,info
-#
-## Feign Configuration (optional, but recommended)
-#spring.cloud.openfeign.client.config.default.connectTimeout=5000
-#spring.cloud.openfeign.client.config.default.readTimeout=5000
+## Add this to StockService/src/main/resources/application.properties
+#spring.cloud.consul.discovery.health-check-path=/actuator/health
+#spring.cloud.consul.discovery.health-check-critical-timeout=30s
