--- a/LAB6_MSRV_1/part2/asdasdasdasdasd/pom.xml
+++ b/LAB6_MSRV_1/part2/asdasdasdasdasd/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
+            <version>4.3.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
