--- a/LAB6_MSRV_1/part2/ProductService/pom.xml
+++ b/LAB6_MSRV_1/part2/ProductService/pom.xml
@@ -68,6 +68,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
