--- a/LAB7_MSRV_2/part2/StockService2/src/main/resources/application.yml
+++ b/LAB7_MSRV_2/part2/StockService2/src/main/resources/application.yml
@@ -1,22 +1,22 @@
 server:
-  port: 8901
+  port: 8902
 
 spring:
   application:
-    name: product-service
+    name: stock-service
   cloud:
     consul:
       host: localhost           # o el host/servicio 'consul' si estás en Docker Compose
-      port: 8500
+      port: 8501
       discovery:
         register: true
         prefer-ip-address: true        # evita hostnames no resolubles
         instance-id: ${spring.application.name}-${server.port}
-        health-check-url: http://host.docker.internal:8901/actuator/health
+        health-check-url: http://host.docker.internal:8902/actuator/health
         health-check-interval: 10s
         deregister-critical-service-after: 1m
         # Si corres en Docker Compose: usa el nombre del servicio/host correcto
-        # hostname: product-service
+        # hostname: stock-service
         # scheme: http
 management:
   endpoints:
