feat(lab8): finish part 1

--- a/LAB8_MSRV_3_Zepking/StockService2/src/main/resources/application.yml
+++ b/LAB8_MSRV_3_Zepking/StockService2/src/main/resources/application.yml
@@ -27,3 +27,9 @@ management:
     health:
       probes:
         enabled: true
+  tracing:
+    sampling:
+      probability: 1.0
+    exporter:
+      zipkin:
+        endpoint: http://localhost:9411/api/v2/spans
