--- a/LAB8_MSRV_3_Zepking/part3/EvenoddApplication/pom.xml
+++ b/LAB8_MSRV_3_Zepking/part3/EvenoddApplication/pom.xml
@@ -57,6 +57,13 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<release>${java.version}</release>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
 				<version>4.2.1</version>
