feat(lab8) part 4: test

--- a/LAB8_MSRV_3_Zepking/part4/ConfigServer/src/main/resources/application.yml
+++ b/LAB8_MSRV_3_Zepking/part4/ConfigServer/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/renespring/springcloud.git
+          uri: https://github.com/leone2016/sa.git
 
 
 
