--- a/LAB8_MSRV_3_Zepking/part4/gateway/src/main/resources/application.yml
+++ b/LAB8_MSRV_3_Zepking/part4/gateway/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: gateway
   cloud:
     consul:
-      host: localhost
+      host: localhosta
       port: 8500
       discovery:
         register: true
