--- a/LAB8_MSRV_3_Zepking/part4/ProductService/pom.xml
+++ b/LAB8_MSRV_3_Zepking/part4/ProductService/pom.xml
@@ -90,6 +90,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
