--- a/LAB8_MSRV_3_Zepking/part4/StockService2/pom.xml
+++ b/LAB8_MSRV_3_Zepking/part4/StockService2/pom.xml
@@ -83,7 +83,10 @@
 			<groupId>io.opentelemetry</groupId>
 			<artifactId>opentelemetry-exporter-zipkin</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 
 	</dependencies>
 	<dependencyManagement>
