--- a/LAB8_MSRV_3_Zepking/part4/configFiles/gateway.yml
+++ b/LAB8_MSRV_3_Zepking/part4/configFiles/gateway.yml
@@ -4,19 +4,18 @@ server:
 spring:
   application:
     name: gateway
+
   cloud:
     consul:
-      host: localhosta
-      port: 8500
+      host: ${CONSUL_HOST:localhost}
+      port: ${CONSUL_PORT:8500}
       discovery:
         register: true
-        prefer-ip-address: true        # evita hostnames no resolubles
+        prefer-ip-address: true
         instance-id: ${spring.application.name}-${server.port}
-        health-check-url: http://host.docker.internal:8080/actuator/health
+        health-check-url: http://host.docker.internal:${server.port}/actuator/health
         health-check-interval: 10s
         deregister-critical-service-after: 1m
-
-
 
 management:
   endpoints:
@@ -26,9 +25,7 @@ management:
   endpoint:
     health:
       show-details: always
-  tracing:
-    sampling:
-      probability: 1.0
-    exporter:
-      zipkin:
-        endpoint: http://localhost:9411/api/v2/spans
+
+management.tracing:
+  sampling.probability: 1
+  exporter.zipkin.endpoint: http://localhost:9411/api/v2/spans
