--- a/LAB8_MSRV_3_Zepking/part4/gateway/pom.xml
+++ b/LAB8_MSRV_3_Zepking/part4/gateway/pom.xml
@@ -76,6 +76,10 @@
 			<groupId>io.opentelemetry</groupId>
 			<artifactId>opentelemetry-exporter-zipkin</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
