--- a/LAB8_MSRV_3_Zepking/part4/ProductService/src/main/resources/application.yml
+++ b/LAB8_MSRV_3_Zepking/part4/ProductService/src/main/resources/application.yml
@@ -1,82 +1,82 @@
-server:
-  port: 8901
+# server:
+#   port: 8901
 
-spring:
-  application:
-    name: product-service
-  cloud:
-    consul:
-      host: localhost           # o el host/servicio 'consul' si estás en Docker Compose
-      port: 8500
-      discovery:
-        register: true
-        prefer-ip-address: true        # evita hostnames no resolubles
-        instance-id: ${spring.application.name}-${server.port}
-        health-check-url: http://host.docker.internal:8901/actuator/health
-        health-check-interval: 10s
-        deregister-critical-service-after: 1m
-        # Si corres en Docker Compose: usa el nombre del servicio/host correcto
-        # hostname: product-service
-        # scheme: http
-    openfeign:
-      circuitbreaker:
-        enabled: true
-      client:
-        config:
-          default:
-            connectTimeout: 2000
-            readTimeout: 2000
-          stock-service:
-            connectTimeout: 1000
-            readTimeout: 1000
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,readiness,liveness,circuitbreakers,circuitbreakerevents
-  prometheus:
-    metrics:
-      export:
-        enabled: true
-  endpoint:
-    health:
-      probes:
-        enabled: true
-  tracing:
-    sampling:
-      probability: 1.0
-    exporter:
-      zipkin:
-        endpoint: http://localhost:9411/api/v2/spans
+# spring:
+#   application:
+#     name: product-service
+#   cloud:
+#     consul:
+#       host: localhost           # o el host/servicio 'consul' si estás en Docker Compose
+#       port: 8500
+#       discovery:
+#         register: true
+#         prefer-ip-address: true        # evita hostnames no resolubles
+#         instance-id: ${spring.application.name}-${server.port}
+#         health-check-url: http://host.docker.internal:8901/actuator/health
+#         health-check-interval: 10s
+#         deregister-critical-service-after: 1m
+#         # Si corres en Docker Compose: usa el nombre del servicio/host correcto
+#         # hostname: product-service
+#         # scheme: http
+#     openfeign:
+#       circuitbreaker:
+#         enabled: true
+#       client:
+#         config:
+#           default:
+#             connectTimeout: 2000
+#             readTimeout: 2000
+#           stock-service:
+#             connectTimeout: 1000
+#             readTimeout: 1000
+# management:
+#   endpoints:
+#     web:
+#       exposure:
+#         include: health,info,readiness,liveness,circuitbreakers,circuitbreakerevents
+#   prometheus:
+#     metrics:
+#       export:
+#         enabled: true
+#   endpoint:
+#     health:
+#       probes:
+#         enabled: true
+#   tracing:
+#     sampling:
+#       probability: 1.0
+#     exporter:
+#       zipkin:
+#         endpoint: http://localhost:9411/api/v2/spans
 
-resilience4j:
-  circuitbreaker:
-    configs:
-      default:
-        registerHealthIndicator: true
-        slidingWindowSize: 10
-        minimumNumberOfCalls: 5
-        permittedNumberOfCallsInHalfOpenState: 3
-        automaticTransitionFromOpenToHalfOpenEnabled: true
-        waitDurationInOpenState: 5s
-        failureRateThreshold: 50
-        eventConsumerBufferSize: 10
-        recordExceptions:
-          - feign.FeignException
-          - java.net.ConnectException
-          - java.net.SocketTimeoutException
-          - java.io.IOException
-          - edu.miu.cs.cs425.productservice.feign.StockServiceUnavailableException
-    instances:
-      stock-service:
-        baseConfig: default
-        waitDurationInOpenState: 3s
-        slidingWindowSize: 5
-        minimumNumberOfCalls: 3
-        failureRateThreshold: 50
-        recordExceptions:
-          - feign.FeignException
-          - java.net.ConnectException
-          - java.net.SocketTimeoutException
-          - java.io.IOException
-          - edu.miu.cs.cs425.productservice.feign.StockServiceUnavailableException
+# resilience4j:
+#   circuitbreaker:
+#     configs:
+#       default:
+#         registerHealthIndicator: true
+#         slidingWindowSize: 10
+#         minimumNumberOfCalls: 5
+#         permittedNumberOfCallsInHalfOpenState: 3
+#         automaticTransitionFromOpenToHalfOpenEnabled: true
+#         waitDurationInOpenState: 5s
+#         failureRateThreshold: 50
+#         eventConsumerBufferSize: 10
+#         recordExceptions:
+#           - feign.FeignException
+#           - java.net.ConnectException
+#           - java.net.SocketTimeoutException
+#           - java.io.IOException
+#           - edu.miu.cs.cs425.productservice.feign.StockServiceUnavailableException
+#     instances:
+#       stock-service:
+#         baseConfig: default
+#         waitDurationInOpenState: 3s
+#         slidingWindowSize: 5
+#         minimumNumberOfCalls: 3
+#         failureRateThreshold: 50
+#         recordExceptions:
+#           - feign.FeignException
+#           - java.net.ConnectException
+#           - java.net.SocketTimeoutException
+#           - java.io.IOException
+#           - edu.miu.cs.cs425.productservice.feign.StockServiceUnavailableException
