--- a/LAB8_MSRV_3_Zepking/part4/configFiles/gateway.yml
+++ b/LAB8_MSRV_3_Zepking/part4/configFiles/gateway.yml
@@ -11,12 +11,12 @@ spring:
       port: ${CONSUL_PORT:8500}
       discovery:
         register: true
-        serviceName: ${spring.application.name}
-        preferIpAddress: true
-        instanceId: ${spring.application.name}-${SERVER_PORT:${server.port:8080}}
-        healthCheckUrl: http://host.docker.internal:${SERVER_PORT:${server.port:8080}}/actuator/health
-        healthCheckInterval: 10s
-        deregisterCriticalServiceAfter: 1m
+        service-name: ${spring.application.name}
+        prefer-ip-address: true
+        instance-id: ${spring.application.name}-${SERVER_PORT:${server.port:8080}}
+        health-check-url: http://host.docker.internal:${SERVER_PORT:${server.port:8080}}/actuator/health
+        health-check-interval: 10s
+        deregister-critical-service-after: 1m
 
 management:
   endpoints:
@@ -26,7 +26,9 @@ management:
   endpoint:
     health:
       show-details: always
-
-management.tracing:
-  sampling.probability: 1
-  exporter.zipkin.endpoint: http://localhost:9411/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1
+    exporter:
+      zipkin:
+        endpoint: http://localhost:9411/api/v2/spans
