--- a/LAB8_MSRV_3_Zepking/part4/configFiles/stock-service.yml
+++ b/LAB8_MSRV_3_Zepking/part4/configFiles/stock-service.yml
@@ -10,12 +10,12 @@ spring:
       port: ${CONSUL_PORT:8500}
       discovery:
         register: true
-        serviceName: ${spring.application.name}
-        preferIpAddress: true
-        instanceId: ${spring.application.name}-${SERVER_PORT:${server.port:8900}}
-        healthCheckUrl: http://host.docker.internal:${SERVER_PORT:${server.port:8900}}/actuator/health
-        healthCheckInterval: 10s
-        deregisterCriticalServiceAfter: 1m
+        service-name: ${spring.application.name}
+        prefer-ip-address: true
+        instance-id: ${spring.application.name}-${SERVER_PORT:${server.port:8900}}
+        health-check-url: http://host.docker.internal:${SERVER_PORT:${server.port:8900}}/actuator/health
+        health-check-interval: 10s
+        deregister-critical-service-after: 1m
 
 management:
   endpoints:
