--- a/LAB8_MSRV_3_Zepking/part4/ProductService/bootstrap.yml
+++ b/LAB8_MSRV_3_Zepking/part4/ProductService/bootstrap.yml
@@ -1,7 +1,9 @@
 spring:
-  cloud:
-    config:
-      uri: http://localhost:8888
-      name: product-service
-      profile: default
+  application:
+    name: product-service
 
+  config:
+    import: optional:configserver:http://localhost:8888
+
+  profiles:
+    active: default
