--- a/LAB8_MSRV_3_Zepking/part4/StockService1/bootstrap.yml
+++ b/LAB8_MSRV_3_Zepking/part4/StockService1/bootstrap.yml
@@ -1,7 +1,8 @@
 spring:
+  application:
+    name: stock-service
+  config:
+    import: optional:configserver:http://localhost:8888
   cloud:
     config:
-      uri: http://localhost:8888
-      name: stock-service
       profile: default
-
