--- a/LAB8_MSRV_3_Zepking/part4/StockService2/bootstrap.yml
+++ b/LAB8_MSRV_3_Zepking/part4/StockService2/bootstrap.yml
@@ -1,7 +1,9 @@
 spring:
+  application:
+    name: stock-service2
+  config:
+    import: optional:configserver:http://localhost:8888
   cloud:
     config:
-      uri: http://localhost:8888
       name: stock-service2
       profile: default
-
