feat(lab8): finish

--- a/LAB8_MSRV_3_Zepking/part4/StockService2/src/main/resources/application.yml
+++ b/LAB8_MSRV_3_Zepking/part4/StockService2/src/main/resources/application.yml
@@ -3,7 +3,7 @@
 
  spring:
    application:
-     name: stock-service
+     name: stock-service2
 #   cloud:
 #     consul:
 #       host: localhost           # o el host/servicio 'consul' si estás en Docker Compose
