--- a/LAB_9_MSRV_TRANSACTIONS/part1/ProductQueryService/build.gradle
+++ b/LAB_9_MSRV_TRANSACTIONS/part1/ProductQueryService/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.session:spring-session-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
