--- a/LAB_9_MSRV_TRANSACTIONS/part1/ProductQueryService/src/main/resources/application.properties
+++ b/LAB_9_MSRV_TRANSACTIONS/part1/ProductQueryService/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=ProductQueryService
+server.port=8082
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=cqrs
+spring.data.mongodb.auto-index-creation=true
