--- a/LAB_9_MSRV_TRANSACTIONS/part1/StockCommandService/src/main/resources/application.properties
+++ b/LAB_9_MSRV_TRANSACTIONS/part1/StockCommandService/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=StockCommandService
+server.port=8081
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=cqrs
+spring.data.mongodb.auto-index-creation=true
