--- a/LAB_9_MSRV_TRANSACTIONS/part3/seat-service/build.gradle
+++ b/LAB_9_MSRV_TRANSACTIONS/part3/seat-service/build.gradle
@@ -19,7 +19,11 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	implementation 'edu.miu.cs.cs425:common:0.0.1-SNAPSHOT'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
