--- a/LAB_11_KAFKA/part1/consumer/pom.xml
+++ b/LAB_11_KAFKA/part1/consumer/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.20.1</version>
+        </dependency>
     </dependencies>
 
     <build>
