--- a/LAB_11_KAFKA/part1/consumer/src/main/resources/application.properties
+++ b/LAB_11_KAFKA/part1/consumer/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=consumer
+
+spring.kafka.bootstrap-servers=localhost:9092
+# set key deserializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+# set value deserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.group-id=gid
+spring.kafka.consumer.properties.isolation.level=read_committed
