--- a/LAB_11_KAFKA/part1/producer/src/main/resources/application.properties
+++ b/LAB_11_KAFKA/part1/producer/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=producer
+
+
+spring.kafka.bootstrap-servers=localhost:9092
+# set key serializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+# set value serializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.group-id=gid
+
+spring.kafka.producer.properties.linger.ms=6000
+
+spring.kafka.producer.transaction-id-prefix=tx-
