--- a/LAB_11_KAFKA/part3/consumer/src/main/resources/application.properties
+++ b/LAB_11_KAFKA/part3/consumer/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.group-id=gid
 spring.kafka.consumer.properties.isolation.level=read_committed
+
+spring.kafka.producer.bootstrap-servers=${spring.kafka.bootstrap-servers}
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+app.kafka.topics.orders=orders-topic
+app.kafka.topics.partitions=3
