--- a/LAB12_STREAM/part1/InterstateSpeedService/pom.xml
+++ b/LAB12_STREAM/part1/InterstateSpeedService/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>edu.miu.cs.cs425</groupId>
-    <artifactId>SpeedService</artifactId>
+    <artifactId>InterstateSpeedService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>SpeedService</name>
     <description>SpeedService</description>
@@ -33,6 +33,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
 
         <dependency>
