--- a/LAB_12_STREAM/part1/FeeCalculatorService/src/main/resources/application.properties
+++ b/LAB_12_STREAM/part1/FeeCalculatorService/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=FeeCalculatorService
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=fee-calculator-service
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.value.default.type=edu.miu.cs.cs425.feecalculatorservice.messaging.FeeRecord
+
+app.topic.owner=ownertopic
