--- a/LAB_12_STREAM/part1/OwnerService/src/main/resources/application.properties
+++ b/LAB_12_STREAM/part1/OwnerService/src/main/resources/application.properties
@@ -1,2 +1,19 @@
 spring.application.name=OwnerService
 server.port=8081
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=owner-service
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.value.default.type=edu.miu.cs.cs425.ownerservice.messaging.SpeedingEvent
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.trusted.packages=*
+
+app.topic.speeding=tofasttopic
+app.topic.owner=ownertopic
